# simplestats

./: .gitignore  Cargo.toml  README.md  simplestats.1
.github/workflows/: release.yml
src/: build.rs  main.rs
