[package]
name = "simplestats"
version = "0.1.0"
edition = "2021"
default-run = "simplestats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[dependencies]
clap = "3.0.0-beta.4"
cli-table = "0.4.6"
man = {version = "0.3.0", optional = true}

[features]
build_deps = ["man"]
