[package]
name = "simplestats"
version = "0.1.2"
edition = "2018"
default-run = "simplestats"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/simplestats"
documentation = "https://docs.rs/simplestats"
description = "Generate simple statistics on line delimited numbers"

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[dependencies]
clap = "3.0.0-beta.4"
cli-table = "0.4.6"
man = {version = "0.3.0", optional = true}

[features]
build_deps = ["man"]
